--- a/ChocolatBoom/chocolatBoom2021/css/normalize.css
+++ b/ChocolatBoom/chocolatBoom2021/css/normalize.css
@@ -84,8 +84,8 @@
      justify-items: center;
   }
   a {
-    rgba (141, 75, 42, 0.959);
-    justify-content: space-around;
+    background-color: rgba(141, 75, 42, 0.959);
+    justify-content:space-between;
  
   }
 
@@ -100,7 +100,7 @@
   
   abbr[title] {
     border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
+    text-decoration:underline dotted ; /* 2 */
     text-decoration: underline dotted; /* 2 */
   }
   
@@ -222,7 +222,7 @@
   button,
   [type="button"],
   [type="reset"],
-  [type="submit"] {
+  [type="submit"] ::-webkit-file-upload-button {
     -webkit-appearance: button;
   }
   
@@ -314,7 +314,7 @@
    * 2. Correct the outline style in Safari.
    */
   
-  [type="search"] {
+  [type="search"] ::-webkit-file-upload-button {
     -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
