--- a/ChocolatBoom/chocolatBoom2021/css/tablette.css
+++ b/ChocolatBoom/chocolatBoom2021/css/tablette.css
@@ -2,23 +2,6 @@
 @media screen and (max-width: 960px) 
 
 {
-*{
-    box-sizing: border-box;
-}
-
-nav{
-    
-    margin-top: 0.5em;
-    background-color: #733E27;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-    }
-
- main{
-
-    display: flex;
- }
 
 
 
@@ -64,6 +47,11 @@ body {
 p{
 
     font-family: 'Open Sans', sans-serif;
+}
+
+main{
+
+    flex-direction: column;
 }
 
 h2{
